make lists vertically expand rather than a string field